--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
