--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "vue": "^2.5.2",
+    "vue-awesome": "^3.5.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
