--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "popper.js": "^1.15.0",
     "vue": "^2.5.2",
     "vue-awesome": "^3.5.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuesax": "^3.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -41,7 +42,7 @@
     "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -73,7 +74,7 @@
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-style-loader": "^3.1.2",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
